--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
@@ -14,6 +14,70 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  display: flex;
+  position: relative;
+}
+
+.header__title {
+  margin: 0;
+  padding: 0;
+  max-width: 730px;
+  margin-left: 64px;
+  font-size: 102px;
+  font-weight: 600;
+  line-height: 96px;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+}
+
+.header_link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.header_subtitle {
+  max-width: 338px;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 1;
+  margin: 0;
+  padding: 0;
+}
+
+.header__main-illustration {
+  max-width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  object-fit: cover;
+}
+
+.header__square-pic {
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
+}
+
+.logo {
+  width: 228px;
+  height: 32px;
+  z-index: 1;
+}
+
+.logo_place_header {
+  top: 30px;
+  left: 64px;
+  position: absolute;
+  background-image: url("../images/logo_place_header.svg");
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -22,10 +86,287 @@
   width: 568px;
 }
 
+.description {
+  padding-top: 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.two-columns {
+  max-width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  margin: 0;
+  padding: 0;
+  max-width: 175px;
+  color: #2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+
+}
+
+.two-columns__main-text {
+  margin: 0;
+  padding: 0;
+  max-width: 80%;
+  min-width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+
+  /* justify-content: flex-start;*/
+}
+
+.two-columns__paragraph {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 30px;
+}
+
+.two-columns :last-child {
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.digits {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section-title {
+
+  margin: 0;
+  max-width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+
+}
+
+.section-subtitle {
+  margin: 0;
+  padding: 0;
+  padding-top: 20px;
+  padding-bottom: 100px;
+  max-width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+
+}
+
+.table {
+  margin: 0;
+  padding: 0;
+  max-width: 1100px;
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 20px;
+}
+
+.table__text {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.table__text:last-child {
+  margin-bottom: 0;
+}
+
+.feynman {
+  height: 890px;
+  position: relative;
+  background: #f2f2f2 url("../images/feynman.png");
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.feynman__title {
+  margin: 0;
+  padding: 0;
+  max-width: 648px;
+  padding-top: 100px;
+  padding-bottom: 70px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  text-align: center;
+
+}
+
+.feynman__subtitle {
+  margin: 0;
+  padding: 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.feynman__link {
+  color: #2f80ed;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  text-decoration: none;
+}
+
+.kaufman {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: black;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.kaufman__triangle {
+  background: url("../images/kaufman-triangle.svg");
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 1;
+}
+
+.section-title_theme_dark {
+  margin: 0;
+  padding: 0;
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  margin: 0;
+  padding: 0;
+  color: white;
+}
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
-  width: 200px;
-  color: white;
+  margin: 0;
+  padding: 0;
+  max-width: 200px;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 2;
+}
+
+.table__heading_theme_dark {
+  margin: 0;
+  padding: 0;
+  color: white;
+}
+
+.table__text_theme_dark {
+  margin: 0;
+  padding: 0;
+  color: white;
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 40px;
+  background-color: black;
+  min-height: 350px;
+  display: flex;
+  box-sizing: border-box;
+  justify-content: center;
+}
+
+.footer__columns {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 711px;
+  justify-content: space-between;
+}
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 16px;
+  margin: 0;
+}
+
+.footer__column-link {
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  display: inline-block;
+}
+
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-heading {
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  padding-bottom: 20px;
+  margin: 0;
+  padding: 0
+}
+
+.footer__social-icon {
+  margin-right: 10px;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+}
+
+.logo_place_footer {
+  background-image: url("../images/logo_place_footer.svg");
+}
+
+.footer__author {
+  color: white;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
