--- a/styles/style.css
+++ b/styles/style.css
@@ -16,28 +16,26 @@
   /* выше установили ограничения для секции */
   background-color: #f2f2f2;
   display: flex;
+  align-items: center;
   position: relative;
 }
 
 .header__title {
   margin: 0;
-  padding: 0;
   max-width: 730px;
   margin-left: 64px;
   font-size: 102px;
   font-weight: 600;
   line-height: 96px;
-  display: flex;
-  align-items: center;
   z-index: 1;
 }
 
-.header_link {
+.header__link {
   color: #2f80ed;
   text-decoration: none;
 }
 
-.header_subtitle {
+.header__subtitle {
   max-width: 338px;
   position: absolute;
   bottom: 30px;
@@ -51,7 +49,7 @@
 }
 
 .header__main-illustration {
-  max-width: 765px;
+  width: 765px;
   height: 608px;
   position: absolute;
   bottom: 0;
@@ -145,7 +143,6 @@
 }
 
 .section-title {
-
   margin: 0;
   max-width: 60%;
   line-height: 1.15;
@@ -155,15 +152,11 @@
 }
 
 .section-subtitle {
-  margin: 0;
-  padding: 0;
-  padding-top: 20px;
-  padding-bottom: 100px;
+  margin: 20px 0 0 0;
   max-width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-
 }
 
 .table {
@@ -182,15 +175,18 @@
 }
 
 .table__heading {
-  margin: 0;
-  padding: 0;
-  padding-bottom: 20px;
+  margin:0 0 20px 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
 }
 
 .table__text {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  /*margin-bottom: 20px;*/
 }
 
 .table__text:last-child {
@@ -198,7 +194,9 @@
 }
 
 .feynman {
-  height: 890px;
+  padding-top: 100px;
+  box-sizing: border-box;
+  min-height: 890px;
   position: relative;
   background: #f2f2f2 url("../images/feynman.png");
   background-repeat: no-repeat;
@@ -209,11 +207,8 @@
 }
 
 .feynman__title {
-  margin: 0;
-  padding: 0;
+  margin: 0 0 70px 0;
   max-width: 648px;
-  padding-top: 100px;
-  padding-bottom: 70px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
@@ -223,7 +218,6 @@
 
 .feynman__subtitle {
   margin: 0;
-  padding: 0;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -244,7 +238,7 @@
 .kaufman {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: black;
+  background-color: #1f1f1f;
   overflow: hidden;
   position: relative;
   display: flex;
@@ -253,10 +247,12 @@
 }
 
 .kaufman__triangle {
-  background: url("../images/kaufman-triangle.svg");
+  background-image: url("../images/kaufman-triangle.svg");
+  position: absolute;
+  background-repeat:no-repeat;
+  background-size: contain;
   width: 877px;
   height: 877px;
-  position: absolute;
   top: 0;
   right: -210px;
   z-index: 1;
@@ -269,14 +265,11 @@
 }
 
 .section-subtitle_theme_dark {
-  margin: 0;
-  padding: 0;
   color: white;
 }
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
-  margin: 0;
-  padding: 0;
+
   max-width: 200px;
   margin-right: 0;
   margin-top: 80px;
@@ -291,14 +284,13 @@
 
 .table__text_theme_dark {
   margin: 0;
-  padding: 0;
   color: white;
 }
 
 .footer {
   padding-top: 60px;
   padding-bottom: 40px;
-  background-color: black;
+  background-color: #1f1f1f;
   min-height: 350px;
   display: flex;
   box-sizing: border-box;
@@ -324,14 +316,17 @@
   flex-direction: column;
   padding-bottom: 16px;
   margin: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .footer__column-link {
+  margin: 0;
   color: white;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
-  display: inline-block;
+
 }
 
 .footer__column_content_social {
@@ -346,14 +341,13 @@
   font-weight: 600;
   padding-bottom: 20px;
   margin: 0;
-  padding: 0;
 }
 
 .footer__social-icon {
   margin-right: 10px;
   width: 16px;
   height: 16px;
-  display: inline-block;
+  vertical-align: middle;
 }
 
 .logo_place_footer {
