--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  z-index: 1;
 }
 
 .header__title {
@@ -27,7 +28,6 @@
   font-size: 102px;
   font-weight: 600;
   line-height: 96px;
-  z-index: 1;
 }
 
 .header__link {
@@ -43,9 +43,7 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  z-index: 1;
   margin: 0;
-  padding: 0;
 }
 
 .header__main-illustration {
@@ -54,7 +52,7 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  z-index: 1;
+  z-index: -1;
   object-fit: cover;
 }
 
@@ -62,7 +60,6 @@
 .logo {
   width: 228px;
   height: 32px;
-  z-index: 1;
 }
 
 .logo_place_header {
@@ -80,6 +77,7 @@
   position: absolute;
   top: 64px;
   right: 0;
+  z-index: -2;
 }
 
 .description {
@@ -97,7 +95,6 @@
 
 .two-columns__brief {
   margin: 0;
-  padding: 0;
   max-width: 175px;
   color: #2f80ed;
   line-height: 1.2;
@@ -107,8 +104,6 @@
 }
 
 .two-columns__main-text {
-  margin: 0;
-  padding: 0;
   max-width: 80%;
   min-width: 784px;
   line-height: 34px;
@@ -120,7 +115,6 @@
 
 .two-columns__paragraph {
   margin: 0;
-  padding: 0;
   margin-bottom: 30px;
 }
 
@@ -175,7 +169,7 @@
 }
 
 .table__heading {
-  margin:0 0 20px 0;
+  margin: 0 0 20px 0;
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
@@ -244,6 +238,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 }
 
 .kaufman__triangle {
@@ -255,12 +250,10 @@
   height: 877px;
   top: 0;
   right: -210px;
-  z-index: 1;
+  z-index: -1;
 }
 
 .section-title_theme_dark {
-  margin: 0;
-  padding: 0;
   color: white;
 }
 
@@ -269,21 +262,16 @@
 }
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
-
   max-width: 200px;
   margin-right: 0;
   margin-top: 80px;
-  z-index: 2;
 }
 
 .table__heading_theme_dark {
-  margin: 0;
-  padding: 0;
   color: white;
 }
 
 .table__text_theme_dark {
-  margin: 0;
   color: white;
 }
 
@@ -314,18 +302,17 @@
 .footer__column-links {
   display: flex;
   flex-direction: column;
-  padding-bottom: 16px;
+  padding: 0 0 16px 0;
   margin: 0;
   list-style: none;
-  padding: 0;
 }
 
 .footer__column-link {
-  margin: 0;
   color: white;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
+  text-decoration: none;
 
 }
 
@@ -359,6 +346,5 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  padding-top: 18px;
-  padding-bottom: 18px;
+  margin: 18px 0 18px 0;
 }
