--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -2,5 +2,5 @@
   top: 30px;
   left: 64px;
   position: absolute;
-  background-image: url("../../../images/logo_place_header.svg");
+  background-image: url("../../images/logo_place_header.svg");
 }
