--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -2,7 +2,9 @@
   width: 515px;
   height: 316px;
   margin-right: 20px;
-
+  width: 560;
+  height: 315;
+  border: 0;
 }
 
 .video__iframe:nth-child(2n) {
